--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -18,6 +18,7 @@
 
 
 
+
 #header3-n H3 {
   text-align: left;
 }
@@ -26,7 +27,7 @@
 }
 #msg-box5-21 .mbr-header__text {
   color: #000000;
-  text-align: right;
+  text-align: center;
   font-size: 36px;
 }
 #msg-box5-21 .mbr-header__subtext {
@@ -36,7 +37,7 @@
   color: #000000;
 }
 #msg-box5-21 .mbr-article P {
-  text-align: right;
+  text-align: center;
 }
 #msg-box3-z .mbr-header .mbr-header__text {
   text-align: left;
@@ -82,6 +83,14 @@
 }
 #msg-box3-v .mbr-article {
   color: #000000;
+}
+#header3-24 SPAN {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 18px;
+}
+#header3-24 P {
+  color: #000000;
+  text-align: left;
 }
 #msg-box3-13 .mbr-header .mbr-header__text {
   text-align: center;
@@ -140,11 +149,17 @@
 #msg-box1-1c .mbr-article {
   color: #fff;
 }
+#features1-1e .mbr-section__col .mbr-header__text {
+  font-size: 18px;
+}
 #msg-box3-1z .mbr-header .mbr-header__text {
   text-align: center;
 }
 #msg-box3-1z .mbr-header .mbr-header__subtext {
   text-align: center;
+}
+#msg-box3-1z .mbr-article {
+  color: #000000;
 }
 #msg-box1-1f .mbr-header .mbr-header__text {
   color: #fff;
